--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -75,6 +75,33 @@ select {
     border-width: .1em;
 }
 
+.p-security-alert {
+    margin: .8rem 0;
+    padding: .75rem 1rem;
+    border-radius: .5rem;
+    background: var(--warning);
+    color: var(--bg-dark);
+    box-shadow: var(--shadow);
+}
+
+.p-security-btn {
+    float: right;
+    background: none;
+    border: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+    color: var(--bg-dark)
+}
+
+.p-security-alert-error {
+    margin: .5rem 0;
+    padding: .6rem 1rem;
+    border-radius: .4rem;
+    background: var(--danger);
+    color: var(--bg-light);
+    box-shadow: var(--shadow);
+}
+
 .p-input-email {
     align-items: center;
 }
@@ -228,15 +255,27 @@ select {
     width: min-content;
     flex: 1;
     text-align: center;
-    /* border: 1px solid var(--border, #e0e0e0); */
 }
-
-/* .p-summary-card:hover {
-    background: var(--gradient);
-} */
 
 .p-summary-value {
     color: var(--success);
+}
+
+.p-summary-progress-bar {
+    height: 0.2em;
+    background: var(--border-muted);
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 0.4em 0.6em 0em 0.6em;
+}
+
+.p-summary-progress-fill {
+    height: 100%;
+    width: 0;
+    background: var(--success);
+    /* default green */
+    border-radius: 6px;
+    transition: width 0.6s ease;
 }
 
 .p-add-category {
@@ -311,8 +350,8 @@ select {
 }
 
 .p-category-limit-name {
-    font-weight: bolder;
-    font-size: 0.8em;
+    font-weight: 600;
+    font-size: 1.3em;
     display: inline-block;
     padding: 0.1em 0.8em;
     margin-bottom: 0.8em;
@@ -340,16 +379,16 @@ select {
 
     /* make it feel pressed */
     transform: translateY(1px);
-    color: var(--primary);
+    color: var(--text);
 }
 
 .p-category-limit-amount {
     color: var(--text-muted);
     font-weight: bold;
     padding-left: 0.4em;
-    background: var(--gradient-hover);
     width: min-content;
     border-radius: 0.4em;
+    font-size: 1.2em;
 }
 
 .p-expense-amount-name {
@@ -369,9 +408,6 @@ select {
 }
 
 /* Balance section styling */
-.p-remaining-container {
-    display: flex;
-}
 
 .p-remaining-container {
     display: flex;
@@ -455,23 +491,25 @@ select {
 }
 
 .p-btn-warning {
-    background: var(--warning);
-    width: 5.1em;
-    height: 2.7em;
+    background: var(--bg-light);
+    width: 3.2em;
+    height: 2.4em;
+    color: var(--warning);
 }
 
 .p-btn-warning:hover {
-    background: color-mix(in oklch, var(--danger) 85%, var(--bg-light));
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
 }
 
 .p-btn-danger {
-    background: var(--danger);
-    width: 5.1em;
-    height: 2.7em;
+    background: var(--bg-light);
+    width: 3.2em;
+    height: 2.4em;
+    color: var(--danger);
 }
 
 .p-btn-danger:hover {
-    background: color-mix(in oklch, var(--danger) 85%, var(--bg-light));
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
 }
 
 .p-btn-info {
@@ -514,6 +552,46 @@ select {
     margin-top: .4em;
 }
 
+.p-modal-btn-tertiary {
+    background: var(--bg-light);
+    width: 100%;
+    color: var(--tertiary);
+}
+
+.p-modal-btn-tertiary:hover {
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
+}
+
+.p-modal-btn-primary {
+    background: var(--bg-light);
+    width: 100%;
+    color: var(--primary);
+}
+
+.p-modal-btn-primary:hover {
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
+}
+
+.p-modal-btn-warning {
+    background: var(--bg-light);
+    width: 100%;
+    color: var(--warning);
+}
+
+.p-modal-btn-warning:hover {
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
+}
+
+.p-modal-btn-danger {
+    background: var(--bg-light);
+    width: 100%;
+    color: var(--danger);
+}
+
+.p-modal-btn-danger:hover {
+    background: color-mix(in oklch, var(--gradient-hover) 85%, var(--bg-dark));
+}
+
 /* --- FIX SAFARI TOUCH ISSUES --- */
 .p-detail-card {
     overflow: visible !important;
@@ -530,10 +608,54 @@ select {
 }
 
 /* ---------------------- Category Progress section ---------------------- */
+.p-category-progress-paragraph {
+    font-weight: 600;
+    margin-top: 0.8em;
+    padding: 0.4em 1em;
+    border-color: var(--primary);
+    border-width: .1em;
+    border-top: 1px solid var(--border-muted);
+}
+
+.p-category-progress-gap {
+    margin-top: 0.8em;
+    padding: 0.8em 0em;
+}
+
+.p-category-header-divider {
+    padding-bottom: 0.4em;
+    border-color: var(--primary);
+    border-width: .1em;
+    border-bottom: 1px solid var(--border-muted);
+}
+
+.p-category-progress-balance-container {
+    margin-top: 0.6em;
+    display: flex;
+    flex-direction: row;
+    gap: 0.4em;
+    margin-bottom: 0.4em;
+}
+
+.p-category-progress-expense-divider {
+    padding-top: 0.4em;
+    border-color: var(--primary);
+    border-width: .1em;
+    border-top: 1px solid var(--border-muted);
+}
+
+.p-category-progress-expenses {
+    margin: 0.4em;
+    display: flex;
+    justify-content: space-between;
+    gap: 0.8em;
+    width: 100%"
+
+}
+
 .p-category-progress-list {
     display: grid;
     gap: 0.6em 0.8em;
-    margin: 0.8em 0;
     padding: 0 0.6em;
     grid-template-columns: 1fr 1fr;
 }
@@ -544,6 +666,41 @@ select {
     border-radius: 0.4em;
     box-shadow: var(--shadow);
     /* Thicker colored left border */
+}
+
+.p-category-progress-ul {
+    list-style: none;
+    margin: 0;
+    background: var(--bg-dark);
+    border-radius: 0.4em;
+}
+
+.p-category-progress-li {
+    padding: 0.6rem 1.2em 0.4em 1.2em;
+    margin: 0;
+    border-radius: 0.2em;
+    border-bottom: 1px solid var(--border);
+    display: flex;
+    justify-content: space-between;
+    gap: 0.8em;
+}
+
+.p-category-progress-btns-container {
+    border-color: var(--primary);
+    border-width: .1em;
+    border-top: 1px solid var(--border-muted);
+    padding-top: 0.8em;
+    margin: 0.4em;
+    display: flex;
+    justify-content: space-between;
+    gap: 0.8em;
+    width: 100%;
+}
+
+.p-category-progress-no-content {
+    padding: 0em 0.4em 0.4em 0.4em;
+    background: var(--bg-dark);
+    border-radius: 0.4em;
 }
 
 .p-category-header {
