--- a/app/static/css/modal.css
+++ b/app/static/css/modal.css
@@ -22,7 +22,7 @@
 }
 
 .p-modal-content {
-    background: var(--bg-light);
+    background: var(--bg);
     border-radius: .75rem;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.25);
     width: 90%;
